Bug 458277 - Undecipherable Start Time values in System Monitor > Processes
Summary: Undecipherable Start Time values in System Monitor > Processes
Status: RESOLVED FIXED
Alias: None
Product: plasma-systemmonitor
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.24.5
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2022-08-25 02:29 UTC by aslam karachiwala
Modified: 2023-01-24 13:59 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot showing the undecipherable Start Time value. (12.42 KB, image/png)
2022-08-25 02:29 UTC, aslam karachiwala
Details

Note You need to log in before you can comment on or make changes to this bug.
Description aslam karachiwala 2022-08-25 02:29:44 UTC
Created attachment 151568 [details]
Screenshot showing the undecipherable Start Time value.

SUMMARY
In the System Monitor application, the "Start Time" column in the Processes tab shows undecipherable values.


STEPS TO REPRODUCE
1. Launch the System Monitor (/usr/bin/plasma-systemmonitor)
2. Go to the Processes tab in System Monitor.
3. Launch an application, e.g., 'gimp'.
4. Search for "gimp" in the Processes list in System Monitor.
5. Look at the value of "Start Time" corresponding to the 'gimp' process.

OBSERVED RESULT
I've seen numbers such as "3856:33" and "120934:42" as Start Time values for processes just after starting them. 

In the column definitions, the "Start Time" is defined as "the elapsed time since the process was started." The above values don't make sense as this Start Time in hours/minutes/seconds.

EXPECTED RESULT
Actual values of Start Time, as defined, in a recognizable format, e.g., <hours>:<minutes>:<seconds>

SOFTWARE/OS VERSIONS 
Linux/KDE Plasma: Kubuntu 22.04.1 LTS
(available in About System)
KDE Plasma Version: 5.24.6
KDE Frameworks Version: 5.95.0
Qt Version: 5.15.3

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2022-08-25 10:35:10 UTC
Can reproduce.
Comment 2 David Redondo 2022-08-25 10:52:32 UTC
Currently times are only formated to minutes
Comment 3 Arjen Hiemstra 2023-01-23 14:37:41 UTC
Git commit 38f81271bdef2737c0716090314a588bcfcabf43 by Arjen Hiemstra.
Committed on 23/01/2023 at 14:22.
Pushed by ahiemstra into branch 'master'.

Un-deprecate UnitBootTimestamp and use it for the "start time" column

Start time is actually the time when the process started, expressed as
the number of seconds since boot. So this seems to match the
BootTimestamp unit. So bring that back, using far simpler code.

M  +19   -8    formatter/Formatter.cpp
M  +1    -1    formatter/Unit.h
M  +1    -2    processcore/extended_process_list.cpp

https://invent.kde.org/plasma/libksysguard/commit/38f81271bdef2737c0716090314a588bcfcabf43
Comment 4 Arjen Hiemstra 2023-01-24 13:59:56 UTC
Git commit c77cff1969f4e040f92061fcb3e08fc26b7e0ba4 by Arjen Hiemstra.
Committed on 23/01/2023 at 14:43.
Pushed by davidre into branch 'Plasma/5.27'.

Un-deprecate UnitBootTimestamp and use it for the "start time" column

Start time is actually the time when the process started, expressed as
the number of seconds since boot. So this seems to match the
BootTimestamp unit. So bring that back, using far simpler code.

M  +19   -8    formatter/Formatter.cpp
M  +1    -1    formatter/Unit.h
M  +1    -2    processcore/extended_process_list.cpp

https://invent.kde.org/plasma/libksysguard/commit/c77cff1969f4e040f92061fcb3e08fc26b7e0ba4