Un-deprecate UnitBootTimestamp and use it for the "start time" column

Start time is actually the time when the process started, expressed as
the number of seconds since boot. So this seems to match the
BootTimestamp unit. So bring that back, using far simpler code.

BUG: 458277